--- a/_posts/2021-05-09-post-4.md
+++ b/_posts/2021-05-09-post-4.md
@@ -6,10 +6,10 @@ date: 2021-05-09
 
 I attended ICLR 2021 (virtually) and presented two workshop papers:
 
-1 - "Fine-Grained Ɛ-Margin Closed-Form Stabilization of Parametric Hawkes Processes", at the RobustML Workshop @ ICLR 2021
+1 - "[Fine-Grained Ɛ-Margin Closed-Form Stabilization of Parametric Hawkes Processes](https://sites.google.com/connect.hku.hk/robustml-2021/accepted-papers/paper-006)", at the RobustML Workshop @ ICLR 2021
 
 and 
 
-2 - "Bayesian Compressed Deep Learning for State Estimation of Unobservable Power Systems", at the Neural COmpression Workshop @ ICLR 2021
+2 - "[Bayesian Compressed Deep Learning for State Estimation of Unobservable Power Systems](https://openreview.net/pdf?id=tbIi6KUr1hq)", at the Neural COmpression Workshop @ ICLR 2021
 
 Fell free to reach out and discuss about them!
