--- a/_posts/2021-05-09-post-4.md
+++ b/_posts/2021-05-09-post-4.md
@@ -10,6 +10,6 @@ I attended ICLR 2021 (virtually) and presented two workshop papers:
 
 and 
 
-2 - "[Bayesian Compressed Deep Learning for State Estimation of Unobservable Power Systems](https://openreview.net/pdf?id=tbIi6KUr1hq)", at the Neural COmpression Workshop @ ICLR 2021
+2 - "[Bayesian Compressed Deep Learning for State Estimation of Unobservable Power Systems](https://openreview.net/pdf?id=tbIi6KUr1hq)", at the Neural Compression Workshop @ ICLR 2021
 
 Fell free to reach out and discuss about them!
