--- a/_posts/2024-12-19-post-5.md
+++ b/_posts/2024-12-19-post-5.md
@@ -6,6 +6,6 @@ date: 2024-12-19
 
 Our paper entitled "Correlation-Boosted Ensemble Local Patterns for Signal Quality Classification" was published at IEEE Signal Processing Letters. 
 
-You may take a look at it [here](/files/Correlation-Boosted_Ensemble_Local_Patterns_for_Photoplethysmographic_Signal_Quality_Classification.pdf)"
+You may take a look at it [here](/files/Correlation-Boosted_Ensemble_Local_Patterns_for_Photoplethysmographic_Signal_Quality_Classification.pdf)
 
 Fell free to reach out and discuss about it!
